@@ -30,6 +30,8 @@ params {
   design = null
 
   // Input parameters
+  splitFastq = false
+  fastqChunksSize = 20000000
   genome = false
   singleEnd = false
   reads = null
